add benchmark for sort and fib

--- a/x10/Makefile
+++ b/x10/Makefile
@@ -3,5 +3,7 @@ OPT_LEVEL=-O5
 
 sort: Sort.x10
 	x10c++ $(OPT_LEVEL) -o sort ./Sort.x10
+fib: Fib.x10
+	x10c++ $(OPT_LEVEL) -o fib ./Fib.x10
 clean:
-	rm ./sort ./*.cc *.h
+	rm ./sort ./fib ./*.cc *.h
